Bump version to 1.0.0.4-teste and use source-overlay-plugin 1.0.2